k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ansible-system
  labels:
    name: ansible-system
    app: ansible-agent
